# indielib-crossplatform

./: .gitignore  AUTHORS  LICENSE  README.md
IndieLib/: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README  README.md  TODO
IndieLib/IndieLib_vc2008/: FreeLibProps_Debug.vsprops  GLEWProps_Release.vsprops  GLEWProps_debug.vsprops  IndieLib_vc2008.vcproj  SDL Props.vsprops  SDL Props_Debug.vsprops  Tests_Win32.vcproj  UnitTests.vcproj
IndieLib/IndieLib_vc2008/Editor/: Editor.vcproj
IndieLib/IndieLib_vc2008/tutorials/: IndieLib.vsprops  tutorials.sln
IndieLib/assets/: cooper.xml  font_small.xml  tileset_01.xml
IndieLib/assets/animations/: character1.xml  character1_offsetTests.xml  character2.xml  dust.xml  sun.xml  sword_master.xml  ufo.xml
IndieLib/assets/editor/: tileset_01.xml  tileset_02.xml  tileset_03.xml  tileset_04.xml
IndieLib/assets/skeleton/: skeleton.x
IndieLib/assets/trex dx/: dbody.tga  dbodybump.tga  dbodytt.tga  dino videogame.x  dino videogame2.x
IndieLib/cmake/Modules/: FindFreeImage.cmake  FindFreetype.cmake  FindGLEW.cmake  FindSDL2.cmake  FindTinyXML.cmake  FindTmxParser.cmake  FindUnitTest++.cmake
IndieLib/common/dependencies/: .gitignore
IndieLib/common/include/: CollisionParser.h  Defines.h  IND_3dMesh.h  IND_3dMeshManager.h  IND_Animation.h  IND_AnimationManager.h  IND_Camera2d.h  IND_Camera3d.h  IND_Entity2d.h  IND_Entity2dManager.h  IND_Entity3d.h  IND_Entity3dManager.h  IND_Font.h  IND_FontManager.h  IND_Frame.h  IND_GLShaderUniform.h  IND_Image.h  IND_ImageManager.h  IND_Input.h  IND_Light.h  IND_LightManager.h  IND_Math.h  IND_Object.h  IND_Render.h  IND_Sequence.h  IND_ShaderProgram.h  IND_Shaders.h  IND_SpriterEntity.h  IND_SpriterManager.h  IND_Surface.h  IND_SurfaceManager.h  IND_TTF_Font.h  IND_TTF_FontManager.h  IND_Timer.h  IND_TmxMap.h  IND_TmxMapManager.h  IND_Vector2.h  IND_Vector3.h  IND_Window.h  ImageCutter.h  (+5 more)
IndieLib/common/src/: CollisionParser.cpp  DebugApi.cpp  DebugApi.h  FreeImageHelper.cpp  FreeImageHelper.h  FreeTypeHandle.h  Global.cpp  Global.h  IND_3dMesh.cpp  IND_3dMeshManager.cpp  IND_Animation.cpp  IND_AnimationManager.cpp  IND_Camera2d.cpp  IND_Camera3d.cpp  IND_Entity2d.cpp  IND_Entity2dManager.cpp  IND_Entity3d.cpp  IND_Entity3dManager.cpp  IND_FontManager.cpp  IND_Image.cpp  IND_ImageManager.cpp  IND_Input.cpp  IND_Light.cpp  IND_LightManager.cpp  IND_Math.cpp  IND_Render.cpp  IND_ShaderManager.cpp  IND_ShaderManager.h  IND_ShaderProgram.cpp  IND_Shaders.cpp  IND_SpriterEntity.cpp  IND_SpriterManager.cpp  IND_Surface.cpp  IND_SurfaceManager.cpp  IND_TTF_Font.cpp  IND_TTF_FontManager.cpp  IND_Timer.cpp  IND_TmxMap.cpp  IND_TmxMapManager.cpp  IND_Window.cpp  (+8 more)
IndieLib/doc/: Doxyfile
IndieLib/doc/html/: _assert_exception_8h_source.html  _check_macros_8h_source.html  _checks_8h_source.html  _collision_parser_8h_source.html  _config_8h_source.html  _current_test_8h_source.html  _debug_api_8h_source.html  _deferred_test_reporter_8h_source.html  _deferred_test_result_8h_source.html  _defines_8h_source.html  _direct_x_render_8h_source.html  _direct_x_texture_builder_8h_source.html  _execute_test_8h_source.html  _free_image_2_dist_2_free_image_8h_source.html  _free_image_2_examples_2_generic_2_f_i_i_o___mem_8h_source.html  _free_image_2_examples_2_open_g_l_2_texture_manager_2_texture_manager_8h_source.html  _free_image_2_examples_2_plugin_2_plugin_cradle_8h_source.html  _free_image_2_source_2_cache_file_8h_source.html  _free_image_2_source_2_deprecation_manager_2_deprecation_mgr_8h_source.html  _free_image_2_source_2_free_image_2_p_s_d_parser_8h_source.html  _free_image_2_source_2_free_image_8h_source.html  _free_image_2_source_2_free_image_i_o_8h_source.html  _free_image_2_source_2_free_image_toolkit_2_filters_8h_source.html  _free_image_2_source_2_free_image_toolkit_2_resize_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2cderror_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2cdjpeg_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jconfig_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jdct_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jerror_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jinclude_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jmemsys_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jmorecfg_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jpegint_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jpeglib_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2jversion_8h_source.html  _free_image_2_source_2_lib_j_p_e_g_2transupp_8h_source.html  _free_image_2_source_2_lib_open_j_p_e_g_2bio_8h_source.html  _free_image_2_source_2_lib_open_j_p_e_g_2cidx__manager_8h.html  _free_image_2_source_2_lib_open_j_p_e_g_2cidx__manager_8h.js  _free_image_2_source_2_lib_open_j_p_e_g_2cidx__manager_8h_source.html  (+4327 more)
IndieLib/docs/: BUILD_ENVIRONMENT_SETUP_HOWTO.txt
IndieLib/docs/Doxygen/: Doxyfile
IndieLib/ios/: builddependencies.sh
IndieLib/linux/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libIndieLib.la  libtool
IndieLib/mac/: builddependencies.sh  release.sh
IndieLib/resources/: rocket_collisions.xml
IndieLib/temp/: README
IndieLib/tests/: CIndieLib.cpp  CIndieLib.h  CIndieLib_vc2008.cpp  WorkingPath.cpp  WorkingPath.h
IndieLib/tools/: README.md
IndieLib/tutorials/: .gitignore  WorkingPath.cpp  WorkingPath.h
IndieLib/win/: DirectXProps.props  DirectXProps.vsprops  FreeLibProps_Debug.props  FreeLibProps_Release.props  FreeLibProps_Release.vsprops  FreeType_Debug.props  FreeType_Release.props  GLEWProps_Release.props  GLEWProps_Release.vsprops  GLEWProps_debug.props  GLEWProps_debug.vsprops  IndieLib.sln  IndieLib.vcxproj  IndieLib.vcxproj.filters  IndieLib_vc2008.vcproj  IndieLib_vc2008.vcxproj  IndieLib_vc2008.vcxproj.filters  OpenGLProps.props  OpenGLProps.vsprops  SDL Props.props  SDL Props.vsprops  SDL Props_Debug.props  SDL Props_Debug.vsprops  Tests_Win32.vcproj  Tests_Win32.vcxproj  Tests_Win32.vcxproj.filters  UnitTests.vcproj  UnitTests.vcxproj  UnitTests.vcxproj.filters  build_deps_vc2008.bat
(+1204 files in other folders)
