#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([IndieLib], [0.001], [michael@visualdesign.dk])
#CFLAGS=$CFLAGS + " -I{$topsrc_dir}../../common/dependencies/DevIL-SDK-x86-1.7.8/include/" 
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
LT_INIT
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile] [tests/manual/Makefile] [tests/unittests/Makefile] [tutorials/basic/01_Installing/Makefile] [tutorials/basic/02_IND_Surface/Makefile] [tutorials/basic/03_IND_Image/Makefile] [tutorials/basic/04_IND_Animation/Makefile]  [tutorials/basic/05_IND_Font/Makefile] [tutorials/basic/06_Primitives/Makefile] [tutorials/basic/07_IND_Input/Makefile] [tutorials/basic/08_Collisions/Makefile] [tutorials/basic/11_Animated_Tile_Scrolling/Makefile] [tutorials/basic/13_2d_Camera/Makefile] [tutorials/basic/15_Parallax_Scrolling/Makefile] [tutorials/basic/16_IND_Timer/Makefile] [tutorials/advanced/01_IND_Surface_Grids/Makefile] [tutorials/advanced/02_Blitting_2d_Directly/Makefile] [tutorials/advanced/04_Several_ViewPorts/Makefile] [tutorials/advanced/05_IND_TmxMap/Makefile]  [tutorials/advanced/06_Spriter/Makefile] [tutorials/benchmark/01_Alien_BenchMark/Makefile] [tutorials/benchmark/02_Rabbits_BenchMark/Makefile])
AC_OUTPUT()
